--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,6 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env.example
-
-# prod env files
-.env
 
 # vercel
 .vercel
@@ -38,3 +34,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Sentry Config File
+.sentryclirc
